Attempt to fix WebGL on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -123,7 +123,7 @@ a:hover {
   }
 
   .home-splash-panel {
-    height: 300px;
+    height: 400px;
   }
 
   .home-about-panel {
